--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -2,10 +2,10 @@
   <h3 class="modal-title">Log in</h3>
 </div>
 <div class="modal-body">
-  <button class="btn btn-block btn-facebook" ng-click="authenticate('facebook')">
+  <button class="btn btn-block btn-facebook" ng-click="vm.authenticate('facebook')">
     <i class="ion-social-facebook"></i> Sign in with Facebook
   </button>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+  <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancel</button>
 </div>
