--- a/app/partials/sports.html
+++ b/app/partials/sports.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="feed">
-    <div class="status panel panel-default {{ event.sport.name | lispCase }}" ng-repeat="event in vm.events">
+    <div class="status mountain-bike panel panel-default" ng-repeat="event in vm.events">
       <div class="panel-heading">
         <a href="#" class="thumbnail">
           <img ng-src="//graph.facebook.com/{{ event.user.facebook }}/picture?type=large"
