--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -44,8 +44,7 @@ body {
 }
 
 .feed .status .panel-heading .thumbnail {
-    width: 100px;
-    height: 100px;
+    max-width: 100px;
     display: inline-block;
     overflow: hidden;
     margin-bottom: 0;
@@ -73,8 +72,7 @@ body {
 }
 
 .feed .comments .thumbnail {
-    width: 60px;
-    height: 60px;
+    max-width: 60px;
     display: inline-block;
     overflow: hidden;
     margin-bottom: 0;
