--- a/app/partials/events.html
+++ b/app/partials/events.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="feed">
-    <div class="status panel panel-default {{ event.sport.name | lispCase }}" ng-repeat="event in vm.events">
+    <div class="status panel panel-default {{ event.sport.name | lispCase }}" ng-repeat="event in vm.events"
+      ng-class="{'highlight': event.highlight}">
       <div class="panel-heading">
         <a href="#" class="thumbnail">
           <img ng-src="//graph.facebook.com/{{ event.user.facebook }}/picture?type=large"
@@ -22,6 +23,22 @@
           <button class="btn btn-success" type="button"
               ng-click="vm.displayComments[event.id] = !vm.displayComments[event.id]">
             Comentarios <span class="badge">{{ event.comments.length }}</span>
+          </button>
+          <button class="btn btn-danger" type="button" ng-click="vm.remove(event.id)"
+              ng-show="vm.isAuthor(event.user.id) || vm.isAdmin()">
+            Eliminar
+          </button>
+          <button class="btn btn-info" type="button" ng-click="vm.edit(event.id)"
+              ng-show="vm.isAuthor(event.user.id) || vm.isAdmin()">
+            Editar
+          </button>
+          <button class="btn btn-warning" type="button" ng-click="vm.highlight(event.id)"
+              ng-show="vm.isAdmin() && !event.highlight">
+            Destacar
+          </button>
+          <button class="btn btn-warning" type="button" ng-click="vm.highlight(event.id)"
+              ng-show="vm.isAdmin() && event.highlight">
+            Quitar Destacado
           </button>
         </div>
       </div>
