--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -1,11 +1,11 @@
 <div class="modal-header">
-  <h3 class="modal-title">Log in</h3>
+  <h3 class="modal-title">Ingresar</h3>
 </div>
 <div class="modal-body">
-  <button class="btn btn-block btn-facebook" ng-click="vm.authenticate('facebook')">
-    <i class="ion-social-facebook"></i> Sign in with Facebook
-  </button>
+  <a class="btn btn-block btn-facebook" ng-click="vm.authenticate('facebook')">
+    <i class="fa fa-facebook fa-lg"></i> Ingresar con Facebook
+  </a>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancel</button>
+  <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancelar</button>
 </div>
