--- a/app/partials/edit_event.html
+++ b/app/partials/edit_event.html
@@ -21,8 +21,10 @@
     </div>
     <div class="form-group">
       <label>Deporte</label>
-      <select ng-options="sport.id as sport.name for sport in vm.sports track by sport.id"
-          ng-model="vm.event.sport_id" class="form-control"></select>
+      <select ng-model="vm.event.sport_id" ng-options="sport.id as sport.name for sport in vm.sports"
+          class="form-control">
+        <option value="">Elegir deporte</option>
+      </select>
     </div>
   </form>
 </div>
