--- a/app/partials/events.html
+++ b/app/partials/events.html
@@ -4,7 +4,7 @@
       Aun no hay eventos cargados
     </div>
     <div class="status panel panel-default {{ event.sport.name | lispCase }}" ng-repeat="event in vm.events"
-      ng-class="{'highlight': event.highlight}">
+      ng-class="{'highlight': parseInt(event.highlight, 10)}">
       <div class="panel-heading">
         <a href="#" class="thumbnail">
           <img ng-src="//graph.facebook.com/{{ event.user.facebook }}/picture?type=large"
@@ -36,11 +36,11 @@
             Editar
           </button>
           <button class="btn btn-warning" type="button" ng-click="vm.highlight(event.id)"
-              ng-show="vm.isAdmin() && !event.highlight">
+              ng-show="vm.isAdmin() && !parseInt(event.highlight, 10)">
             Destacar
           </button>
           <button class="btn btn-warning" type="button" ng-click="vm.highlight(event.id)"
-              ng-show="vm.isAdmin() && event.highlight">
+              ng-show="vm.isAdmin() && parseInt(event.highlight, 10)">
             Quitar Destacado
           </button>
         </div>
