--- a/app/partials/events.html
+++ b/app/partials/events.html
@@ -4,14 +4,14 @@
       Aun no hay eventos cargados
     </div>
     <div class="status panel panel-default {{ event.sport.name | lispCase }}" ng-repeat="event in vm.events"
-      ng-class="{'highlight': parseInt(event.highlight, 10)}">
+      ng-class="{'highlight': event.highlight}">
       <div class="panel-heading">
         <a href="#" class="thumbnail">
-          <img ng-src="//graph.facebook.com/{{ event.user.facebook }}/picture?type=large"
-              alt="{{ event.user.displayName }}">
+          <img ng-src="/public/images/{{ event.user.id }}/{{ event.user.avatar }}"
+              alt="{{ event.user.name }}">
         </a>
         <h3 class="panel-title">
-          {{ event.user.displayName }}<br/>
+          {{ event.user.name }}<br/>
           <small><span am-time-ago="event.created_at"></span></small>
         </h3>
       </div>
@@ -36,11 +36,11 @@
             Editar
           </button>
           <button class="btn btn-warning" type="button" ng-click="vm.highlight(event.id)"
-              ng-show="vm.isAdmin() && !parseInt(event.highlight, 10)">
+              ng-show="vm.isAdmin() && !event.highlight">
             Destacar
           </button>
           <button class="btn btn-warning" type="button" ng-click="vm.highlight(event.id)"
-              ng-show="vm.isAdmin() && parseInt(event.highlight, 10)">
+              ng-show="vm.isAdmin() && event.highlight">
             Quitar Destacado
           </button>
         </div>
@@ -49,10 +49,10 @@
         <div class="comment" ng-repeat="comment in event.comments">
           <a href="#" class="thumbnail">
             <img ng-src="//graph.facebook.com/{{ comment.user.facebook }}/picture?type=large"
-                alt="{{ comment.user.displayName }}">
+                alt="{{ comment.user.name }}">
           </a>
           <div>
-            <p class="text-info ">{{ comment.user.displayName }}</p>
+            <p class="text-info ">{{ comment.user.name }}</p>
             <p>{{ comment.comment }}</p>
           </div>
         </div>
