--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -1,11 +1,38 @@
 <div class="modal-header">
-  <h3 class="modal-title">Ingresar</h3>
+  <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar" ng-click="vm.cancel()">
+    <span aria-hidden="true">&times;</span>
+  </button>
+  <h3 class="modal-title">Inicia Sesion en Trentos</h3>
+  <span class="text-danger" ng-show="vm.error">{{ vm.error }}</span>
 </div>
 <div class="modal-body">
-  <a class="btn btn-block btn-facebook" ng-click="vm.authenticate('facebook')">
-    <i class="fa fa-facebook fa-lg"></i> Ingresar con Facebook
-  </a>
+  <form name="vm.form" novalidate>
+    <div class="form-group">
+      <input type="email" id="email" name="email" required ng-change="vm.clean()"
+          class="form-control" ng-model="vm.user.email" placeholder="Direccion de email">
+      <span class="help-block text-danger"
+          ng-show="vm.form.email.$dirty && vm.form.email.$invalid">
+        <span ng-show="vm.form.email.$dirty && vm.form.email.$error.required"
+            class="text-danger">
+          Este campo es obligatorio
+        </span>
+      </span>
+    </div>
+    <div class="form-group">
+      <input type="password" id="password" name="password" required ng-change="vm.clean()"
+          class="form-control" ng-model="vm.user.password" placeholder="Contraseña">
+      <span class="help-block text-danger"
+          ng-show="vm.form.password.$dirty && vm.form.password.$invalid">
+        <span ng-show="vm.form.password.$dirty && vm.form.password.$error.required"
+            class="text-danger">
+          Este campo es obligatorio
+        </span>
+      </span>
+    </div>
+    <button type="submit" class="btn btn-success" ng-disabled="vm.form.$invalid || vm.form.$pristine"
+        ng-click="vm.authenticate()">Iniciar sesión</button>
+  </form>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancelar</button>
+  ¿Aun no tienes cuenta? <a href="#">Registrate</a>.
 </div>
