--- a/app/partials/sports.html
+++ b/app/partials/sports.html
@@ -8,10 +8,10 @@
       <div class="panel-heading">
         <a href="#" class="thumbnail">
           <img ng-src="//graph.facebook.com/{{ event.user.facebook }}/picture?type=large"
-              alt="{{ event.user.displayName }}">
+              alt="{{ event.user.name }}">
         </a>
         <h3 class="panel-title">
-          {{ event.user.displayName }}<br/>
+          {{ event.user.name }}<br/>
           <small><span am-time-ago="event.created_at"></span></small>
         </h3>
       </div>
@@ -49,10 +49,10 @@
         <div class="comment" ng-repeat="comment in event.comments">
           <a href="#" class="thumbnail">
             <img ng-src="//graph.facebook.com/{{ comment.user.facebook }}/picture?type=large"
-                alt="{{ comment.user.displayName }}">
+                alt="{{ comment.user.name }}">
           </a>
           <div>
-            <p class="text-info ">{{ comment.user.displayName }}</p>
+            <p class="text-info ">{{ comment.user.name }}</p>
             <p>{{ comment.comment }}</p>
           </div>
         </div>
