--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -95,3 +95,19 @@ body {
     border-color: #3B5998;
     background-color: #8b9dc3;
 }
+
+.browse-file {
+    overflow: hidden;
+    position: relative;
+}
+
+.browse-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
+    cursor: inherit;
+}
