Adds ciclismo de ruta

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -43,6 +43,10 @@ body {
     background-image: url('../images/backgrounds/running.png');
 }
 
+.feed .status.ciclismo-de-ruta .panel-heading {
+    background-image: url('../images/backgrounds/running.png');
+}
+
 .feed .status .panel-heading .thumbnail {
     max-width: 100px;
     display: inline-block;
