--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,9 +1,7 @@
 <div class="jumbotron">
   <div class="container">
     <h1>Trentos</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tincidunt at magna egestas rhoncus. Morbi nec
-      ipsum vel eros semper feugiat. Donec tincidunt lorem ac urna feugiat venenatis. In at maximus ligula. Maecenas
-      sit amet viverra ex, vitae porta eros.</p>
+    <p>Una red social para deportistas</p>
     <p><a class="btn btn-success btn-lg" href="" ng-if="!vm.isAuthenticated()" ng-click="vm.openLoginModal()"
         role="button">Ingresar</a></p>
   </div>
