--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -32,6 +32,9 @@
     <button type="submit" class="btn btn-success" ng-disabled="vm.form.$invalid || vm.form.$pristine"
         ng-click="vm.authenticate()">Iniciar sesión</button>
   </form>
+  <div class="social-buttons">
+    <button class="btn btn-facebook btn-block" ng-click="vm.authenticate('facebook')">Ingresa con Facebook</button>
+  </div>
 </div>
 <div class="modal-footer">
   ¿Aun no tienes cuenta? <a href="#">Registrate</a>.
