--- a/app/partials/events.html
+++ b/app/partials/events.html
@@ -83,5 +83,7 @@
         </form>
       </div>
     </div>
+    <button class="btn btn-info btn-block" ng-show="vm.events.length && vm.loadMoreEnabled"
+        ng-click="vm.loadMore()">Load More</button>
   </div>
 </div>
