Adds today events

--- a/app/partials/events.html
+++ b/app/partials/events.html
@@ -14,7 +14,7 @@
         </a>
         <h3 class="panel-title">
           {{ event.user.name }}<br/>
-          <small><span am-time-ago="event.created_at"></span></small>
+          <small><span am-time-ago="event.datetime"></span></small>
         </h3>
       </div>
       <div class="panel-body">
