--- a/app/partials/add_event.html
+++ b/app/partials/add_event.html
@@ -18,6 +18,22 @@
         </span>
       </span>
     </div>
+    <div class="row">
+      <div class="form-group col-xs-6 date-popup">
+        <label>Fecha</label>
+        <p class="input-group">
+          <input type="text" class="form-control" uib-datepicker-popup="{{ vm.dateFormat }}" ng-model="vm.date" is-open="vm.datePopupOpened"
+              datepicker-options="vm.dateOptions" ng-required="true" clear-text="Limpiar" close-text="Cerrar" current-text="Hoy" />
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="vm.openDatePopup()"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+        </p>
+      </div>
+      <div class="form-group col-xs-6">
+        <label>Hora</label>
+        <div uib-timepicker ng-required="true" ng-model="vm.time" show-meridian="false"></div>
+      </div>
+    </div>
     <div class="form-group">
       <label>Lugar</label>
       <input type="text" class="form-control" disabled ng-model="vm.location"
