--- a/app/partials/events.html
+++ b/app/partials/events.html
@@ -89,6 +89,6 @@
       </div>
     </div>
     <button class="btn btn-info btn-block" ng-show="vm.events.length && vm.loadMoreEnabled"
-        ng-click="vm.loadMore()">Load More</button>
+        ng-click="vm.loadMore()">Mas Eventos</button>
   </div>
 </div>
